Fri Feb 23 15:37:03 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_dirent.inl (alphasort): Use a bigger hammer on the casts.

Fri Feb 23 10:50:41 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.inl:
          Fixed casts again. Hopefully now I got it right.
        
Fri Feb 23 08:56:15 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.inl:
          Added casts to fix compile errors.

        * ace/config-rtems.h:
        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          Added ACE_LACKS_ALPHASORT.

Thu Feb 22 18:37:00 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:
        * ace/Service_Config.inl:
        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.cpp:

          Fixing build troubles caused by the different ACE_TSS interface
          for single-threaded builds. Eliminated the intermediary class
          (TSS_Resources) and now storing the actual service gestalt
          pointer in TSS, thus reducig the memory allocation overhead.

Thu Feb 22 16:45:30 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/MT_SOCK_Test.cpp: Document the actual cause of what's been
          observed for some time with some Windows systems exhibiting a
          "delayed rejection" of connections in excess of the listener's
          backlog. Thank you to Aleksandar Vukajlovic <vukajlo at finsoft
          dot co dot yu> for citing the full cause with its supporting
          documentation and explanation.

Thu Feb 22 15:59:12 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-common.h: Change the comments around ACE_HAS_PENTIUM
          to more accurately reflect its use and setting. With the switch to
          QueryPerformanceCounter() for high-res timers on Windows, this